--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -4,8 +4,14 @@
 }
 
 @mixin respond ($breakpoint) {
+  @if $breakpoint == bigDesktop {
+    @media only screen and (max-width: 2000px) {
+      @content;
+    }
+  }
+
   @if $breakpoint == smallDesktop {
-    @media only screen and (max-width: 1400px) {
+    @media only screen and (max-width: 1440px) {
       @content;
     }
   }
